# streamcontroller-lg-monitor-control

./: .gitignore  AGENTS.md  LICENSE  README.md  action_base.py  attribution.json  ddcutil.py  icons.py  main.py  manifest.json  monitor_profile.py  pyproject.toml
.github/workflows/: ci.yml
actions/: slider_base.py
actions/BlackStabilizer/: BlackStabilizer.py
actions/Brightness/: Brightness.py
actions/Contrast/: Contrast.py
actions/InputSwitch/: InputSwitch.py
actions/PbpMode/: PbpMode.py
actions/PowerMode/: PowerMode.py
actions/Sharpness/: Sharpness.py
actions/Volume/: Volume.py
docs/superpowers/plans/: 2026-03-21-worker-thread-shutdown.md
locales/: en_US.json
monitors/: default.toml  lg_ultragear_45gx950a.toml
tests/: test_ddcutil.py  test_monitor_profile.py
