[project]
name = "streamcontroller-lg-monitor-control"
version = "0.1.0"
requires-python = ">=3.11"

[dependency-groups]
ci = [
    "pyright>=1.1",
    "pytest>=8",
    "ruff>=0.8",
]
dev = [
    "pygobject-stubs>=2.12",
    "pyright>=1.1",
    "pytest>=8",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# E402: gi.require_version() must be called before gi.repository imports — unavoidable in GTK plugins
ignore = ["E402"]

[tool.pyright]
include = ["ddcutil.py", "monitor_profile.py"]
exclude = ["main.py", "actions/", "tests/", ".venv/"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
